test: add test case for unit testing
Signed-off-by: Vipin Varghese <vipin.varghese@intel.com>

--- a/app/meson.build
+++ b/app/meson.build
@@ -16,3 +16,5 @@ elif get_option('app') == 'ebpf'
 else
 	error('Application mode is unknown, please use "posix|dpdk|ebpf" mode!')
 endif
+
+subdir('test')
