lib: fix corner cases
Signed-off-by: Vipin Varghese <vipin.varghese@intel.com>

--- a/app/test/meson.build
+++ b/app/test/meson.build
@@ -3,19 +3,21 @@ cc = meson.get_compiler('c')
 #dnsSpoofer_linkargs = ['/usr/local/lib/x86_64-linux-gnu/libDnsSpoofer.so', ]
 #add_project_link_arguments(dnsSpoofer_linkargs, language: 'c')
 
-test_dns = executable('test_StCreateDevice', 'test1.c', dependencies: [], )
-test('invalidParam', test_dns, args : ['portCheck', 'NULL', '12'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['portCheck', 'NULL', '-2'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['portCheck', '123455', '6'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['portCheck', '-1234', '6'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['portCheck', '12saq12321321as', '10'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['ChangeFromDnsName', 'NULL', '0'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['ChangeFromDnsName', 'NULL', '1'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['ChangeFromDnsName', '3w4doo3c', 'valid'], is_parallel : true, priority : 0, suite: 'invalid')
-test('invalidParam', test_dns, args : ['ChangeFromDnsName', '3w4doo3c', 'invalid'], is_parallel : true, priority : 0, suite: 'invalid')
+test_dns = executable('test_dns', 'test1.c', dependencies: [], )
 
-test('validParam', test_dns, args : ['1234', '4'], is_parallel : true, priority : 0, suite: 'valid')
-test('validParam', test_dns, args : ['3www5google3com', 'valid'], is_parallel : true, priority : 0, suite: 'valid')
+# format of arguments - [success|failure, function, args ...] 
+test('invalidParam', test_dns, args : ['0', 'portCheck', 'NULL', '12'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'portCheck', 'NULL', '-2'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'portCheck', '123455', '6'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'portCheck', '-1234', '6'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'portCheck', '12saq12321321as', '10'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'ChangeFromDnsName', 'NULL', 'valid'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'ChangeFromDnsName', 'NULL', 'invalid'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'ChangeFromDnsName', '3www4doo0', 'valid'], is_parallel : true, priority : 0, suite: 'invalid')
+test('invalidParam', test_dns, args : ['0', 'ChangeFromDnsName', '3www4doo0', 'invalid'], is_parallel : true, priority : 0, suite: 'invalid')
+
+test('validParam', test_dns, args : ['1', 'portCheck', '1234', '4'], is_parallel : true, priority : 0, suite: 'valid')
+test('validParam', test_dns, args : ['1', 'ChangeFromDnsName', '3www6google3com0', 'valid'], is_parallel : true, priority : 0, suite: 'valid')
 
 message('To run all tests               : meson test')
 message('To run tests with error log	: meson test --print-errorlogs')
